--- a/.github/workflows/release-helm.yaml
+++ b/.github/workflows/release-helm.yaml
@@ -36,7 +36,7 @@ jobs:
           ignore-unfixed: true
           format: 'table'
           exit-code: '1'
-          trivyignores: './security/.trivyignore.yaml'
+          trivyignores: './security/.trivyignore'
           severity: 'CRITICAL,HIGH'
 
       - name: Run chart-releaser
