--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -59,7 +59,7 @@ jobs:
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: 'ghcr.io/${{ github.repository }}:{{major}}.{{minor}}'
+          image-ref: 'ghcr.io/${{ github.repository }}:${{ github.sha }}'
           format: 'table'
           exit-code: '1'
           ignore-unfixed: true
