--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -34,7 +34,7 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extract metadata (tags, labels) for Docker
+      - name: Extract metadata (tags, labels, sha) for Docker
         id: meta
         uses: docker/metadata-action@v3
         with:
@@ -59,7 +59,7 @@ jobs:
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: 'ghcr.io/${{ github.repository }}:${{ vars.GITHUB_WORKFLOW_SHA }}'
+          image-ref: 'ghcr.io/${{ github.repository }}:sha-${{ steps.meta.outputs.sha }}'
           format: 'table'
           exit-code: '1'
           ignore-unfixed: true
