--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -57,12 +57,12 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
       
       - name: Add SHORT_SHA env property with commit short sha
-        run: echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
+        run: echo "SHORT_SHA=`echo ${{ github.sha }} | cut -c1-8`" >> $GITHUB_ENV
 
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: 'ghcr.io/${{ github.repository }}:${SHORT_SHA}'
+          image-ref: 'ghcr.io/${{ github.repository }}:${{ SHORT_SHA }}'
           format: 'table'
           exit-code: '1'
           ignore-unfixed: true
