--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -62,7 +62,7 @@ jobs:
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: 'ghcr.io/${{ github.repository }}:${{ SHORT_SHA }}'
+          image-ref: 'ghcr.io/${{ github.repository }}:${{ env.SHORT_SHA }}'
           format: 'table'
           exit-code: '1'
           ignore-unfixed: true
