--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -62,17 +62,20 @@ jobs:
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: 'ghcr.io/anaisurlichs/pacman:sha-${{ env.SHORT_SHA }}'
+          image-ref: 'ghcr.io/${{ github.repository_owner }}/pacman:sha-${{ env.SHORT_SHA }}'
           format: 'table'
           exit-code: '1'
           ignore-unfixed: true
           vuln-type: 'os,library'
           severity: 'CRITICAL,HIGH'
+        env:
+          TRIVY_USERNAME: ${{ github.repository_owner }}
+          TRIVY_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
       
       - name: Scan image in a private registry
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: 'ghcr.io/anaisurlichs/pacman:sha-${{ env.SHORT_SHA }}'
+          image-ref: 'ghcr.io/${{ github.repository_owner }}/pacman:sha-${{ env.SHORT_SHA }}'
           scan-type: image
           format: 'github'
           output: 'dependency-results.sbom.json'
@@ -80,8 +83,8 @@ jobs:
           severity: "MEDIUM,HIGH,CRITICAL"
           scanners: "vuln"
         env:
-          TRIVY_USERNAME: "image_registry_admin_username"
-          TRIVY_PASSWORD: "image_registry_admin_password"
+          TRIVY_USERNAME: ${{ github.repository_owner }}
+          TRIVY_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Upload trivy report as a Github artifact
         uses: actions/upload-artifact@v4
