--- a/charts/pacman/values.yaml
+++ b/charts/pacman/values.yaml
@@ -5,9 +5,9 @@ pacman:
   replicaCount: 1
   image:
     registry: ghcr.io
-    repository: AnaisUrlichs
+    repository: anaisurlichs
     image: pacman
-    tag: 0.1.0
+    tag: sha-3db50bd
     pullPolicy: Always
 
 mongodb:
@@ -15,7 +15,7 @@ mongodb:
 
 ## Service configuration.
 service:
-  type: ClusterIP
+  type: LoadBalancer
   port: 80
 
 ## Ingress configuration.
