--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -8,6 +8,9 @@ on:
   schedule:
   - cron: "0 2 * * 1-5"
 
+permissions:
+  contents: write
+
 jobs:
   build-and-push-image:
     runs-on: ubuntu-latest
@@ -63,6 +66,7 @@ jobs:
         uses: aquasecurity/trivy-action@master
         with:
           image-ref: 'ghcr.io/anaisurlichs/pacman:sha-${{ env.SHORT_SHA }}'
+          scan-type: image
           format: 'table'
           exit-code: '1'
           ignore-unfixed: true
