make more careless mistakes
Signed-off-by: AnaisUrlichs <urlichsanais@gmail.com>

--- a/charts/pacman/values.yaml
+++ b/charts/pacman/values.yaml
@@ -13,11 +13,11 @@ pacman:
 mongodb:
   enabled: true
   service:
-    type: Loadbalancer
+    type: LoadBalancer
 
 ## Service configuration.
 service:
-  type: Loadbalancer
+  type: LoadBalancer
   port: 80
 
 ## Ingress configuration.
