update Helm Chart
Signed-off-by: AnaisUrlichs <urlichsanais@gmail.com>

--- a/charts/pacman/values.yaml
+++ b/charts/pacman/values.yaml
@@ -13,11 +13,11 @@ pacman:
 mongodb:
   enabled: true
   service:
-    type: LoadBalancer
+    type: ClusterIP
 
 ## Service configuration.
 service:
-  type: LoadBalancer
+  type: ClusterIP
   port: 80
 
 ## Ingress configuration.
